Tried adding links component to fix overlap

--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,10 @@ h5 {
 .jumbo {
   position: relative;
   width: 100%;
-  flex-shrink: inherit;
+  justify-content: space-between;
+  /* min-height: 200px; */
   padding: 0px !important;
+  margin-bottom: 0rem !important;
 }
 .header-btn {
   position: absolute;
